# pdm-shell

./: README.md  pdm_shell.py  pyproject.toml
