[project]
authors = [
  {name = "abersheeran", email = "me@abersheeran.com"},
]
dependencies = [
  "pdm~=1.8",
]
description = "Use `pdm shell` set PATH and PYTHONPATH in the current shell"
license = {text = "Apache2.0"}
name = "pdm-shell"
requires-python = ">=3.7"
version = "1.0.0"

[project.urls]
homepage = "https://github.com/abersheeran/pdm-shell"

[project.entry-points.pdm]
shell = "pdm_shell:shell"

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
